--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,19 +13,19 @@ server.servlet.context-path=/ls
 #JDBC datasource to use for the license service connection
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 #JDBC url of the license service database
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:licenseserver}?stringtype=unspecified&readOnly=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/psotgres?stringtype=unspecified&readOnly=true
 #JDBC driver class to use for the license service connection
 spring.datasource.driver-class-name=org.postgresql.Driver
 #Username to use for the license service DB connection
-spring.datasource.username=${DB_USERNAME:lsadmin}
+spring.datasource.username=lsadmin
 #Password to use for the license service DB connection
-spring.datasource.password=${DB_PASSWORD:r00tm3}
+spring.datasource.password=r00tm3
 #DB HikariCP connection pool properties @see: https://github.com/brettwooldridge/HikariCP
-spring.datasource.hikari.idle-timeout=${CP_IDLE_TIMEOUT:10000}
-spring.datasource.hikari.connection-timeout=${CP_CONNECTION_TIMEOUT:2000}
-spring.datasource.hikari.validation-timeout=${CP_VALIDATION_TIMEOUT:1000}
-spring.datasource.hikari.minimumIdle=${MINIMUM_CONNECTIONS:5}
-spring.datasource.hikari.maximumPoolSize=${MAXIMUM_CONNECTIONS:20}
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.connection-timeout=2000
+spring.datasource.hikari.validation-timeout=1000
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.maximumPoolSize=20
 #:::::::::::::::::::
 #HIBERNATE CONFIG ::
 #:::::::::::::::::::
