--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,6 @@
 #Port of the license service application
 server.port=${APPLICATION_PORT:9191}
 #Server context of the application (follows host in the url)
-server.servlet.context-path=/ls
 
 #::::::::::::::::::::
 #DATASOURCE CONFIG ::
@@ -13,13 +12,13 @@ server.servlet.context-path=/ls
 #JDBC datasource to use for the license service connection
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 #JDBC url of the license service database
-spring.datasource.url=jdbc:postgresql://localhost:5432/psotgres?stringtype=unspecified&readOnly=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?stringtype=unspecified&readOnly=true
 #JDBC driver class to use for the license service connection
 spring.datasource.driver-class-name=org.postgresql.Driver
 #Username to use for the license service DB connection
-spring.datasource.username=lsadmin
+spring.datasource.username=postgres
 #Password to use for the license service DB connection
-spring.datasource.password=r00tm3
+spring.datasource.password=mysecretpassword
 #DB HikariCP connection pool properties @see: https://github.com/brettwooldridge/HikariCP
 spring.datasource.hikari.idle-timeout=10000
 spring.datasource.hikari.connection-timeout=2000
@@ -37,3 +36,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 # Even if the 'show-sql' is set to false, it still writes to the 'org.hibernate.SQL' logger at DEBUG level.
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+
+
+spring.main.allow-circular-references=true
